# autovhost

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  configure.ac  configure.in  gen_conf.php  mod_autovhost.c  quick_install.sh  read_socket.php
utils/: Makefile  buf.h  transmit_daemon.c  write_daemon.c  write_socket.php
